--- a/templates/adminbase.html
+++ b/templates/adminbase.html
@@ -83,7 +83,7 @@
             </ul>
             
             <div class="sidebar-footer">
-                <a href="#">
+                <a href="{% url "admin_logout" %}">
                     <i class="fa-solid fa-arrow-right-from-bracket"></i>
                     <span>Logout</span>
                 </a>
