Stock Page added View for that is set

--- a/admin_dashboard/templates/products/products_admin.html
+++ b/admin_dashboard/templates/products/products_admin.html
@@ -50,7 +50,8 @@
                     <th>Image</th>
                     <th>Product Name</th>
                     <th>Category</th>
-                    <th>Price</th>
+                    <th>Base Price</th>
+                    <th>Offer Price</th>
                     <th>Status</th>
                     <th>Actions</th>
                 </tr>
@@ -63,7 +64,8 @@
                         </td>
                         <td>{{product.name}}</td>
                         <td>{{product.category}}</td>
-                        <td>₹{{product.price}}</td>
+                        <td>₹{{product.base_price}}</td>
+                        <td>₹{{product.offer_price}}</td>
                         <td>
                             <span class="status-badge status-active">In Stock</span>
                         </td>
