--- a/templates/adminbase.html
+++ b/templates/adminbase.html
@@ -52,7 +52,7 @@
                 </li>
                 
                 <li>
-                    <a href="#"> <i class="fa-solid fa-boxes-stacked"></i>
+                    <a href="{% url "stock_mangement" %}"> <i class="fa-solid fa-boxes-stacked"></i>
                         <span>Stock</span>
                     </a>
                 </li>
