--- a/templates/base.html
+++ b/templates/base.html
@@ -40,13 +40,13 @@
 
     <header class="header">
         <nav class="navbar container">
-            <a href="/" class="logo">TuckIndia.in.in</a>
+            <a href="/" class="logo">TuckIndia.in</a>
 
             <ul class="nav-links">
                 <li><a href="/">Home</a></li>
                 <li><a href="/products">Products</a></li>
                 <li><a href="/about">About</a></li>
-                <li><a href="/contact">Contact</a></li>
+                {% comment %} <li><a href="/contact">Contact</a></li> {% endcomment %}
             </ul>
 
             <div class="nav-icons">
