Added New column to the product and productimags model called image to upload new images from the admin side

--- a/Admin/templates/products/products_admin.html
+++ b/Admin/templates/products/products_admin.html
@@ -60,7 +60,7 @@
                 {% for product in products %}
                     <tr>
                         <td>
-                            <img src="{{product.image}}" alt="Product" class="product-table-image">
+                            <img src="{{product.image_url}}" alt="Product" class="product-table-image">
                         </td>
                         <td>{{product.name}}</td>
                         <td>{{product.category}}</td>
