--- a/Admin/templates/stock/stock_management.html
+++ b/Admin/templates/stock/stock_management.html
@@ -53,7 +53,7 @@
         <td><i class="fa-solid fa-chevron-right toggle-icon"></i></td>
         <td>
             <div class="product-cell">
-                <img src="{{ product.image }}" alt="{{ product.name }}">
+                <img src="{{ product.image_url }}" alt="{{ product.name }}">
                 <span>{{ product.name }}</span>
             </div>
         </td>
