--- a/userFolder/products/templates/products/home.html
+++ b/userFolder/products/templates/products/home.html
@@ -24,7 +24,7 @@
         <div class="product-card">
             <div class="product-image-container">
                 <a href="{% url 'Product_card_view' new_arrival.slug %}">
-                    <img src="{{ new_arrival.image }}" alt="{{ new_arrival.name }}">
+                    <img src="{{ new_arrival.image_url }}" alt="{{ new_arrival.name }}">
                 </a>
                 <div class="product-card-icons">
                     <button aria-label="Add to wishlist"><i class='bx bx-heart'></i></button>
@@ -47,7 +47,7 @@
     <div class="category-grid">
         {% for product in products %}
         <a href="{% url 'Product_card_view' product.slug %}" class="category-card">
-            <img src="{{ product.image }}" alt="{{ product.name }}">
+            <img src="{{ product.image_url }}" alt="{{ product.name }}">
         </a>
         {% endfor %}
     </div>
@@ -62,7 +62,7 @@
         <div class="product-card">
             <div class="product-image-container">
                 <a href="{% url 'Product_card_view' featured_product.slug %}">
-                    <img src="{{ featured_product.image }}" alt="{{ featured_product.name }}">
+                    <img src="{{ featured_product.image_url }}" alt="{{ featured_product.name }}">
                 </a>
                 <div class="product-card-icons">
                     <button aria-label="Add to wishlist"><i class='bx bx-heart'></i></button>
@@ -87,7 +87,7 @@
         <div class="product-card">
             <div class="product-image-container">
                 <a href="{% url 'Product_card_view' most_demand.slug %}">
-                    <img src="{{ most_demand.image }}" alt="{{ most_demand.name }}">
+                    <img src="{{ most_demand.image_url }}" alt="{{ most_demand.name }}">
                 </a>
                 <div class="product-card-icons">
                     <button aria-label="Add to wishlist"><i class='bx bx-heart'></i></button>
