--- a/userFolder/products/templates/products/product_detail.html
+++ b/userFolder/products/templates/products/product_detail.html
@@ -12,7 +12,7 @@
     
     <div class="product-gallery">
         <div class="gallery-main img-zoom-container">
-            <img src="{{ product.image }}" alt="{{ product.name }}" id="main-product-image">
+            <img src="{{ product.image_url }}" alt="{{ product.name }}" id="main-product-image">
         </div>
         <div class="gallery-thumbnails">
             {% for image in images_list_limited %}
@@ -134,7 +134,7 @@
             {% for related_product in related_products %}
                 <a href="{% url 'Product_card_view' related_product.slug %}" class="product-card">
                     <div class="product-card-image">
-                        <img src="{{ related_product.image }}" alt="{{ related_product.name }}">
+                        <img src="{{ related_product.image_url }}" alt="{{ related_product.name }}">
                     </div>
                     <div class="product-card-info">
                         <h3 class="product-card-name">{{ related_product.name }}</h3>
@@ -149,7 +149,7 @@
             {% for random_product in random_products %}
                 <a href="{% url 'Product_card_view' random_product.slug %}" class="product-card">
                     <div class="product-card-image">
-                        <img src="{{ random_product.image }}" alt="{{ random_product.name }}">
+                        <img src="{{ random_product.image_url }}" alt="{{ random_product.name }}">
                     </div>
                     <div class="product-card-info">
                         <h3 class="product-card-name">{{ random_product.name }}</h3>
