--- a/Admin/templates/products/products_admin.html
+++ b/Admin/templates/products/products_admin.html
@@ -13,7 +13,7 @@
             <h1>Products</h1>
             <p>Manage your store products</p>
         </div>
-        <a href="#" class="btn btn-primary"> <i class="fa-solid fa-plus"></i> Add Product
+        <a href="{% url "admin_product_add" %}" class="btn btn-primary"> <i class="fa-solid fa-plus"></i> Add Product
         </a>
     </div>
 
